# empathy-ai

./: .env.example  .gitignore  CONTRIBUTING.md  HACKATHON_ARCHIVE_NOTICE.md  README.md  index.html  pyproject.toml  requirements.txt  session-expired.html
app/: streamlit_app.py
deploy/nginx/: empathyai-basic-auth-fallback.conf.example  empathyai-demo-token.conf
docs/: README.md  architecture.md  checklist_pendencias_implantacao.md  chromadb_decision.md  ethical_framework.md  go_no_go.md  google_cloud_resources.md  http_api_contracts.md  issue_demo_publica_controlada.md  issue_estado_atual_aplicacao.md  issue_estado_atual_aplicacao_en.md  issue_landing_page_project.md  issue_ux_demo_readiness_streamlit.md  privacy_limits.md  privacy_model.md  troubleshooting.md
docs/en/: PROJECT_HISTORY.md  README.md
docs/es/: PROJECT_HISTORY.md  README.md
docs/pt-BR/: PROJECT_HISTORY.md  README.md
empathy_engine/: config.py  errors.py  observability.py  operations.py  ports.py  schemas.py
empathy_engine/i18n/: language.py
landing/: index.html  session-expired.html
scripts/: check_landing_page.py  check_streamlit.py  check_ux_accessibility.py  clean_db.py  smoke_test.py  verify_env.py
specs/: 00-product.md  01-architecture.md  02-requirements.md  README.md  acceptance-matrix.md  implementation-backlog.md  safety-policy-v1.md
tests/: helpers.py  test_acceptance.py  test_config.py  test_demo_scenarios.py  test_demo_token.py  test_i18n.py  test_llm_runtime.py  test_operations.py  test_privacy.py  test_safety.py  test_storage.py  test_use_cases.py  test_workflow.py
(+30 files in other folders)
